# evjson

./: .gitignore  meson-native-clang  meson.build  meson_options.txt
examples/: example1.c  example2.c  meson.build
include/: evjson.h  evjson_tokenizer.h
src/: evjson.c  evjson_tokenizer.c
subprojects/: evol-headers.wrap  evstr.wrap  hashmap.wrap  vec.wrap
tests/: meson.build
